syntax = "proto3";

package hydroponicData;

enum MessageType {
    MSG_HEART_BEAT = 0;
    MSG_OK = 1;
    MSG_ERROR = 2;
    MSG_DATA = 3;
    MSG_TIMEOUT = 4;
}

message hDataPacket {
    MessageType messageType = 1;
    uint32 deviceID = 2;
    string sector = 3;
    float eConductivity = 4;
    float ph = 5;
    float moisture = 6;
    float temperature = 7;
    uint32 waterLevel = 8;
    bool valveState = 9;
    bool pumpState = 10;
    bool ledStatus = 11;
}